@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2011, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -45,5 +45,6 @@ using namespace boost::python;
 void IECoreMaya::bindFromMayaCameraConverter()
 {
 	IECorePython::RunTimeTypedClass<FromMayaCameraConverter>()
+		.def( init<const MDagPath &>() )
 	;
 }
